--- a/index.html
+++ b/index.html
@@ -248,63 +248,63 @@
                     </div>
                         <div class="item Artists_bx">
                             <li>
-                                <img src="/artists/art1.jpg">
+                                <img src="./artists/art1.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art2.jpg">
+                                <img src="./artists/art2.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art3.jpg">
+                                <img src="./artists/art3.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art4.jpg">
+                                <img src="./artists/art4.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art5.jpg">
+                                <img src="./artists/art5.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art6.jpg">
+                                <img src="./artists/art6.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art7.jpg">
+                                <img src="./artists/art7.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art8.jpg">
+                                <img src="./artists/art8.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art9.jpg">
+                                <img src="./artists/art9.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art10.jpg">
+                                <img src="./artists/art10.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art11.jpg">
+                                <img src="./artists/art11.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art12.jpg">
+                                <img src="./artists/art12.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art13.jpg">
+                                <img src="./artists/art13.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art14.jpg">
+                                <img src="./artists/art14.jpg">
                             </li>
 
                             <li>
-                                <img src="/artists/art15.jpg">
+                                <img src="./artists/art15.jpg">
                             </li> 
                           
                         </div>
