--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="menu_song">
                     <li class="songItem">
                          <span>01</span>
-                        <img src="./img2/1.jpg" alt="">
+                        <img src="" alt="">
                         <h5><br>
                             <div class="subtitle"></div>
                         </h5>
@@ -120,7 +120,7 @@
                         <input type="text" placeholder="Search Music...">
                     </div>
                     <div class="user">
-                        <img src="/img/user.png" alt="">
+                        <img src="./img/user.png" alt="">
                     </div>
                </nav>
                <div class="content">
@@ -320,7 +320,7 @@
                     <div class="wave1"></div>
                     <div class="wave1"></div>
               </div>
-              <img src="/img2/6.jpg" alt="" id="poster_master_play">
+              <img src="./img2/6.jpg" alt="" id="poster_master_play">
               <h5 id="title">
                 Metiflix
                 <div class="subtitle">MC POZE</div>
